--- a/css/style.css
+++ b/css/style.css
@@ -433,7 +433,7 @@ header {
       width: 100%;
       float: left;
       position: relative;
-      display: block;
+      display: flex;
       box-sizing: border-box;
       cursor: pointer;
       opacity: 0; }
@@ -500,7 +500,9 @@ header {
           left: 0;
           right: 0;
           bottom: 0;
-          z-index: 2; }
+          z-index: 2; 
+          display: flex;
+          align-items: center;}
           #portfolio .box-customers .customers .bg-portfolio .valign .center {
             width: 100%;
             text-align: center;
