--- a/src/sass/_about.scss
+++ b/src/sass/_about.scss
@@ -1,5 +1,5 @@
 #about {
-	background: url(/img/about.png) no-repeat 50%;
+	background: url(/img/about.jpg) no-repeat 50%;
 	background-size: cover;
 	background-attachment: scroll;
 	height: 100%;
