--- a/css/style.css
+++ b/css/style.css
@@ -1132,28 +1132,29 @@ header.animation .descripition h1 {
   text-align: center;
   padding: 60px 0;
   overflow-x: hidden;
-}
-@media screen and (min-width: 768px) {
-  #contact {
-    padding: 100px 0;
-  }
 } */
 
-
-#contact  {
+#contact {
   background: url(/img/codigo.png) no-repeat 50%;
   background-size: cover;
   background-attachment: scroll;
   height: 100%;
   overflow: auto;
   text-align: center;
+  padding: 60px 0;
 }
 @media screen and (min-width: 992px) {
-  #contact  {
+  #contact {
     background-attachment: fixed;
   }
 }
-#contact  .bg-filter {
+@media screen and (min-width: 768px) {
+  #contact {
+    padding: 100px 0;
+  }
+}
+
+#contact .bg-filter {
   height: 100%;
   overflow: auto;
   width: 100%;
@@ -1188,9 +1189,6 @@ header.animation .descripition h1 {
   justify-content: center;
 }
 
-
-
-
 #contact ul {
   width: 100%;
   text-align: center;
@@ -1202,7 +1200,7 @@ header.animation .descripition h1 {
   padding: 20px;
 }
 #contact ul li a {
-  color: #8955d1;
+  color: #fff;
   -moz-transition: all 1s ease;
   -o-transition: all 1s ease;
   -webkit-transition: all 1s ease;
