feat: change icon social midias

--- a/css/style.css
+++ b/css/style.css
@@ -1056,7 +1056,7 @@ header.animation .descripition h1 {
 #contact ul li a p {
   font-size: 0;
 }
-#contact ul li a span {
+#contact ul li a i {
   font-size: 50px;
 }
 #contact ul li a:hover {
