--- a/src/pages/Home/components/heroSections.scss
+++ b/src/pages/Home/components/heroSections.scss
@@ -1,4 +1,3 @@
-@import './../../../assets/css/color.scss';
 .home {
   padding-right: 0px;
   padding-left: 0px;
@@ -12,7 +11,6 @@
   background-attachment: fixed;
   height: 100%;
   overflow: auto;
-  color: $white-color;
   position: relative;
 
   &__filter {
@@ -37,12 +35,26 @@
     display: inline;
   }
 
+  // @keyframes shakeArrow {
+  //   0%,
+  //   100% {
+  //     transform: translateY(0px);
+  //   }
+  //   20% {
+  //     transform: translateY(-5px);
+  //   }
+  //   40% {
+  //     transform: translateY(0px);
+  //   }
+  //   60% {
+  //     transform: translateY(5px);
+  //   }
+  // }
   .arrow {
-    color: #ffffff;
     margin: 40px auto;
-    animation: shakeArrow 2s infinite linear 600ms;
+    // animation: shakeArrow 2s infinite linear 600ms;
 
-    p {
+    > p {
       display: none;
     }
     i {
