--- a/src/pages/Home/components/heroSections.scss
+++ b/src/pages/Home/components/heroSections.scss
@@ -1,8 +1,3 @@
-.home {
-  padding-right: 0px;
-  padding-left: 0px;
-  height: 100%;
-}
 .hero-sections {
   background: url(./../../../assets/img/background/header-bg-computer.jpg)
     no-repeat 50%;
@@ -35,24 +30,24 @@
     display: inline;
   }
 
-  // @keyframes shakeArrow {
-  //   0%,
-  //   100% {
-  //     transform: translateY(0px);
-  //   }
-  //   20% {
-  //     transform: translateY(-5px);
-  //   }
-  //   40% {
-  //     transform: translateY(0px);
-  //   }
-  //   60% {
-  //     transform: translateY(5px);
-  //   }
-  // }
+  @keyframes shakeArrow {
+    0%,
+    100% {
+      transform: translateY(0px);
+    }
+    20% {
+      transform: translateY(-5px);
+    }
+    40% {
+      transform: translateY(0px);
+    }
+    60% {
+      transform: translateY(5px);
+    }
+  }
   .arrow {
     margin: 40px auto;
-    // animation: shakeArrow 2s infinite linear 600ms;
+    animation: shakeArrow 2s infinite linear 600ms;
 
     > p {
       display: none;
