--- a/src/pages/Home/components/heroSections.scss
+++ b/src/pages/Home/components/heroSections.scss
@@ -2,11 +2,14 @@
   background: url(./../../../assets/img/background/header-bg-computer.jpg)
     no-repeat 50%;
   background-size: cover;
-  // background-attachment: scroll;
+  background-attachment: scroll;
   background-attachment: fixed;
   height: 100%;
   overflow: auto;
   position: relative;
+  @media screen and (min-width: 992px) {
+    background-attachment: fixed;
+  }
 
   &__filter {
     height: 100%;
@@ -21,6 +24,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    padding: 80px 0;
   }
 
   .logo {
@@ -28,6 +32,21 @@
     height: 95px;
     margin-bottom: 30px;
     display: inline;
+  }
+
+  .description {
+    padding: 80px 0;
+    h1 {
+      font-size: 30px;
+      font-weight: 600;
+      color: #ffffff;
+      @media screen and (min-width: 992px) {
+        font-size: 60px;
+      }
+      span {
+        font-weight: 700;
+      }
+    }
   }
 
   @keyframes shakeArrow {
