feat: created component card and section portifolio

--- a/src/pages/Home/components/HeroSections/heroSections.scss
+++ b/src/pages/Home/components/HeroSections/heroSections.scss
@@ -1,5 +1,5 @@
 .hero-sections {
-  background: url(./../../../assets/img/background/header-bg-computer.jpg)
+  background: url(./../../../../assets/img/background/header-bg-computer.jpg)
     no-repeat 50%;
   background-size: cover;
   background-attachment: scroll;
