--- a/src/components/Footer/footer.scss
+++ b/src/components/Footer/footer.scss
@@ -3,15 +3,17 @@ footer {
   color: $white-color;
   font-size: 16px;
   text-align: center;
-  padding: 8px 0 10px;
+  padding: 30px 20px 0px;
   position: relative;
+  @media screen and (min-width: 768px) {
+    padding: 30px 0px 0px;
+  }
   .to-top {
     color: $white-color;
     position: absolute;
     margin: 0 auto;
     animation: shakeArrow 2s infinite linear 600ms;
-    bottom: 100%;
-    left: 48%;
+    top: -60%;
     p {
       font-size: 0px;
     }
