--- a/src/pages/Home/components/HeroSections/heroSections.scss
+++ b/src/pages/Home/components/HeroSections/heroSections.scss
@@ -10,7 +10,10 @@
   }
 
   .description {
-    padding: 80px 0;
+    padding: 80px 20px;
+    @media screen and (min-width: 992px) {
+      padding: 80px 0px;
+    }
     h1 {
       font-size: 30px;
       font-weight: 600;
@@ -25,7 +28,7 @@
   }
 
   .arrow {
-    margin: 40px auto;
+    position: absolute;
     animation: shakeArrow 2s infinite linear 600ms;
 
     > p {
