feat: added link skipt

--- a/src/App.scss
+++ b/src/App.scss
@@ -26,4 +26,16 @@
       background-attachment: fixed;
     }
   }
+
+  #skippy {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    padding: 0;
+    top: -10px;
+    overflow: hidden;
+    clip: rect(0, 0, 0, 0);
+    white-space: nowrap;
+    border: 0;
+  }
 }
