feat:created scrit and button for loading portfolio

--- a/src/components/Card/card.scss
+++ b/src/components/Card/card.scss
@@ -7,6 +7,7 @@
   box-sizing: border-box;
   cursor: pointer;
   padding: 1px;
+  border: transparent;
 
   @media screen and (min-width: 768px) {
     width: 50%;
